# mijia-monitor

./: .gitignore  DEVELOPMENT.md  LICENSE  MIGRATION_PLAN.md  PACKAGING_SOLUTION.md  README.md  cli_monitor.py  mi-monitor.spec  requirements.txt  启动开发环境.bat  快速启动.bat
.github/: copilot-instructions.md
config/: config.yaml
document/: DEVICE_PROFILES.md  LOGIN_FEATURE.md
mi-monitor/: DESIGN.md  QUICKSTART.md  pyproject.toml
mi-monitor/scripts/: run_dev.bat
mi-monitor/src/core/: database.py
mi-monitor/src/utils/: __init__.py  logger.py
scripts/: build.bat  run_dev.sh  update_intervals.py  verify_profile.py
src/: __init__.py  main.py
src/core/: __init__.py  database.py  device_profiles.py  monitor.py
src/resources/profiles/: cuco.plug.v3.json  dmaker.fan.p44.json  miaomiaoce.sensor_ht.t2.json  qmi.plug.psv3.json  xiaomi.router.ra71.json  xiaomi.tv.esh1.json  xiaomi.wifispeaker.l05b.json
src/ui/: __init__.py  cards.py  charts.py  device_detail_dialog.py  main_window.py  qr_login_dialog.py
src/utils/: autostart.py  config_loader.py  debug_console.py  path_utils.py
